--- a/src/main/asciidoc/developer_documentation.adoc
+++ b/src/main/asciidoc/developer_documentation.adoc
@@ -5,6 +5,10 @@
 |...	| ... | ...
 |===
 
+:project_name: Entwicklerdokumentation
+:toc: left
+:numbered:
+
 = Entwicklerdokumentation
 
 == Einführung und Ziele
