--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,8 @@
 projectname = Miss-Mint store management
 brandname = Miss Mint Mending Points
 slogan = Repairs cheap and easy
+
 index.pleaselogin=Please log in to use the management software.
+
+orders=Orders
+orders.receiving=Receiving
