--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -1,3 +1,7 @@
-index.pleaselogin=Bitte melden Sie sich an, um die Management-Software zu nutzen.
 projectname=Miss-Mint-Filialmanagement
 slogan=Reparaturen billig und leicht
+
+index.pleaselogin=Bitte melden Sie sich an, um die Management-Software zu nutzen.
+
+orders=Aufträge
+orders.receiving=Annahme
