resources: show users

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,3 +6,5 @@ index.pleaselogin=Please log in to use the management software.
 
 orders=Orders
 orders.receiving=Receiving
+
+users.title=User Overview
