--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -5,3 +5,5 @@ index.pleaselogin=Bitte melden Sie sich an, um die Management-Software zu nutzen
 
 orders=Aufträge
 orders.receiving=Annahme
+
+users.title=Nutzerübersicht
