--- a/src/main/asciidoc/developer_documentation.adoc
+++ b/src/main/asciidoc/developer_documentation.adoc
@@ -33,6 +33,12 @@ Grad des Schutzes von Informationen und Daten durch ein Produkt oder System,
 sodass Personen oder andere Produkte oder Systeme über den Datenzugriff verfügen,
 der für ihre Art und ihre Berechtigungsstufe angemessen ist.
 
+
+=== Disign
+
+Dieses Merkmal gibt den Grad an Schönheit der Snittstelle des Projektes,
+sodass es für Nutzer angenehm und bequem ist, die Seite zu benutzen.
+
 1 = Nicht wichtig ..
 5 = Sehr wichtig
 
