--- a/src/main/asciidoc/test_plan.adoc
+++ b/src/main/asciidoc/test_plan.adoc
@@ -68,7 +68,31 @@ da insbesondere die Miss-Mint-Filialmanagement-Software keine Kommunikation nach
 [options="headers"]
 |===
 |ID |Anwendungsfall |Vorbedingungen |Eingabe |Ausgabe
-|…  |…              |…              |…       |…
+|U-MissMintOrder-MissMintOrder-0 |UC0040 |- |ein UserAccount, Customer, Eingangs-Datum, erwartetes Fertigstellungsdatum, Dienstleistung, Beschreibung |Zustand wird auf `WAITING` gesetzt und Quantity der Dienstleistung ist 1
+
+|U-MissMintOrder-getLatestFinished-0 |UC0041-UC0043 |Fertigstellungsdatum liegt vor dem erwartetem Fertigstellungsdatum |- | erwartetes Fertigstellungsdatum
+
+|U-MissMintOrder-getLatestFinished-1 |UC0041-UC0043 |Fertigstellungsdatum ist gleich dem erwarteten Fertigstellungsdatum |- | eines der beiden
+
+|U-MissMintOrder-getLatestFinished-2 |UC0041-UC0043 |Fertigstellungsdatum liegt nach dem erwartetem Fertigstellungsdatum |- | Fertigstellungsdatum
+
+|U-MissMintOrder-canPickUp-0 |UC0041-UC0043 |Zustand ist `FINISHED`. |- | `true`
+
+|U-MissMintOrder-canPickUp-1 |UC0041-UC0043 |Zustand ist `STORED`. |- | `true`
+
+|U-MissMintOrder-canPickUp-2 |UC0041-UC0043 |Zustand ist weder `FINISHED` noch `STORED`. |- | `false`
+
+|I-OrderService-calculateCharge-0 |UC0041-UC0043 |Auftrag kann nicht abgeholt werden |- | _Exception_
+
+|I-OrderService-calculateCharge-1 |UC0041-UC0043 |Auftrag, der 10€ kostet, wurde 3 Tage zu spät fertig. Er wird pünktlich abgeholt. |- | -3€
+
+|I-OrderService-calculateCharge-2 |UC0041-UC0043 |Auftrag, der 10€ kostet, wurde pünktlich fertig. Er wird pünktlich abgeholt. |- | 0€
+
+|I-OrderService-calculateCharge-3 |UC0041-UC0043 |Auftrag, der 10€ kostet, wurde 2 Tage zu spät fertig. Er wird 4 Wochen zu spät abgeholt abgeholt. |- | 0€
+
+|I-OrderService-calculateCharge-4 |UC0041-UC0043 |Auftrag, der 10€ kostet, wurde 3 Tage zu spät fertig. Er wird 4 Wochen zu spät abgeholt abgeholt. |- | -1€
+
+|I-OrderService-calculateCharge-4 |UC0041-UC0043 |Auftrag, der 10€ kostet, wurde pünktlich fertig. Er wird 4 Wochen zu spät abgeholt abgeholt. |- | 2€
 |===
 
 === Finanzen
